<resources>
    <string name="app_name">WWD</string>
    <string name="jostojoo">جستجو</string>
    <string name="kalame">کلمه یاب</string>
    <string name="tanzimat">تنظیمات</string>
    <string name="source">source code</string>
    <string name="ahooee">ahooee</string>
    <string name="cancel_search">لغو جستجو</string>

    <string-array name="string_length">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>


    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">بارگزاری پایگاه داده</string>

</resources>