<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectActivity"
    android:background="#000000"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    >



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_jostejoo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/mostatil_siah"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="2sp"

        >

        <TextView
            android:id="@+id/text_jostejoo"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jostojoo"
            android:textSize="26sp"
            android:textDirection="rtl"
            android:layout_gravity="center"

            android:textColor="#FFFFFF"


               />




    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/mostatil_zereshki"
            android:id="@+id/linear_kalame"
            android:orientation="vertical"
            android:gravity="center"

            android:layout_margin="2sp"

            >


            <TextView
                android:id="@+id/text_kalame"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kalame"
                android:textSize="26sp"
                android:textDirection="rtl"
                android:layout_gravity="center"

                android:textColor="#FFFFFF"




                />




        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_tanzimat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mostatil_sabz"
            android:orientation="vertical"
            android:gravity="center"

            android:layout_margin="2sp"

            >

            <TextView
                android:text="@string/tanzimat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_tanzimat"
                android:clickable="false"
                android:textSize="26sp"
                android:textDirection="rtl"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                />




        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        >


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_linuxian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mostatil_soorati"
            android:gravity="center"
            android:orientation="vertical"

            android:layout_margin="2sp"

            >

            <TextView
                android:id="@+id/text_linuxian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:fontFamily="casual"
                android:text="@string/ahooee"
                android:textColor="#FFFFFF"
                android:textDirection="rtl"
                android:textSize="26sp"
                android:textStyle="bold" />





        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_source"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/mostatil_abi"
            android:gravity="center"
            android:orientation="vertical"

            android:layout_margin="2sp"

            >

            <TextView
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_source"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                android:textDirection="rtl"
                android:text="@string/source"
                android:layout_gravity="center"
                />




        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>